# GenAi-practise

./: README.md
RAG/Rag-sample/: README.md  chunk_by_section.py  extract.py  image_base64.py  main.py  pyproject.toml  test.py
RAG/Rag-sample/Maths-Book/: save_image_metadata.json
RAG/Rag-sample/Maths-Book/text/: page_1.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_2.txt  page_20.txt  page_21.txt  page_22.txt  page_23.txt  page_24.txt  page_25.txt  page_26.txt  page_27.txt  page_28.txt  page_29.txt  page_3.txt  page_30.txt  page_31.txt  page_32.txt  page_33.txt  page_34.txt  page_35.txt  page_36.txt  page_37.txt  page_38.txt  page_4.txt  page_5.txt  page_6.txt  page_7.txt  page_8.txt  page_9.txt
RAG/Rag-sample/services/: llm_embedding.py
RAG/VectorDB/: main.py  pyproject.toml
RAG/VectorDB/chroma_db/8529dd53-a415-4de4-a45c-217dafa71890/: index_metadata.pickle
RAG/VectorDB/education_text_corpus/: botany.txt  computer_science.txt  geography.txt  history.txt  zoology.txt
RAG/VectorDB/ingest/: vectordb_faiss.py  vectordb_ingest.py
RAG/VectorDB/prompts/: rag_prompt.py
RAG/VectorDB/services/: llm_embedding.py  vector_validation.py
RAG/hello_llms/: .env  experiment.ipynb  main.py  pyproject.toml
RAG/langchain/: Langchain.MD  chain.py  chatbot.py  langchain_document.ipynb  main.py  pyproject.toml  sample.txt
RAG/langchain/spliters/: langchain-splitters.ipynb  split-doc.py  splitter-betterapproch.py
