[project]
name = "vectordb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
]
