[project]
name = "hello-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
]
