[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "logging>=0.4.9.6",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "textloader>=0.0.9",
]
